[package]
name                   = "edge-domain"
version                = "0.10.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description = "edge — L2 Domain: umbrella crate; activate individual features (handler, event, command …) or `full` for all 14 port contracts"
keywords    = ["domain", "handler", "event-sourcing", "sea", "swe"]
categories  = ["development-tools"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "handler"

[lib]
path = "main/src/lib.rs"

[features]
default     = [
    "entity", "valueobject",
    "clock", "validator", "policy",
    "command", "query", "snapshot", "service",
    "repository", "handler", "event",
    "projection", "saga",
]
entity      = ["dep:edge-domain-entity"]
valueobject = ["dep:edge-domain-valueobject"]
clock       = ["dep:edge-domain-clock"]
validator   = ["dep:edge-domain-validator"]
policy      = ["dep:edge-domain-policy"]
command     = ["dep:edge-domain-command"]
query       = ["dep:edge-domain-query"]
snapshot    = ["dep:edge-domain-snapshot"]
service     = ["dep:edge-domain-service"]
repository  = ["dep:edge-domain-repository"]
handler     = ["dep:edge-domain-handler"]
event       = ["dep:edge-domain-event"]
pipeline    = ["dep:edge-domain-pipeline"]
projection  = ["dep:edge-domain-projection", "event"]
saga        = ["dep:edge-domain-saga",        "event", "command"]
security    = []
registry    = ["dep:edge-domain-registry"]
lifecycle   = ["dep:edge-domain-lifecycle"]
observer    = ["dep:edge-domain-observer"]
full        = [
    "entity", "valueobject",
    "clock", "validator", "policy",
    "command", "query", "snapshot", "service",
    "repository", "handler", "event", "pipeline",
    "projection", "saga",
    "security",
    "registry", "lifecycle", "observer",
]

[dependencies]
thiserror     = "2"
async-trait   = "0.1"
parking_lot   = "0.12"
tracing       = { version = "0.1", default-features = false }

edge-domain-entity      = { path = "../domain-entity", optional = true }
edge-domain-valueobject = { path = "../domain-valueobject", optional = true }
edge-domain-clock       = { path = "../domain-clock", optional = true }
edge-domain-validator   = { path = "../domain-validator", optional = true }
edge-domain-policy      = { path = "../domain-policy", optional = true }
edge-domain-command     = { path = "../domain-command", optional = true }
edge-domain-query       = { path = "../domain-query", optional = true }
edge-domain-snapshot    = { path = "../domain-snapshot", optional = true }
edge-domain-service     = { path = "../domain-service", optional = true }
edge-domain-repository  = { path = "../domain-repository", optional = true }
edge-domain-handler     = { path = "../domain-handler", optional = true }
edge-domain-event       = { path = "../domain-event", optional = true }
edge-domain-pipeline    = { git = "https://github.com/sweengineeringlabs/edge-pipeline.git", tag = "v0.1.1", optional = true }
edge-domain-projection  = { path = "../domain-projection", optional = true }
edge-domain-saga        = { path = "../domain-saga", optional = true }
edge-domain-registry    = { path = "../domain-registry", optional = true }
edge-domain-lifecycle   = { path = "../domain-lifecycle", optional = true }
edge-domain-observer    = { path = "../domain-observer", optional = true }
edge-domain-security    = { path = "../domain-security" }

[dev-dependencies]
tokio       = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
futures     = "0.3"
edge-domain-entity = { path = "../domain-entity" }
edge-domain-valueobject.workspace  = true
edge-domain-clock.workspace        = true
edge-domain-validator.workspace    = true
edge-domain-policy.workspace       = true
edge-domain-command.workspace      = true
edge-domain-query.workspace        = true
edge-domain-snapshot.workspace     = true
edge-domain-service.workspace      = true
edge-domain-repository.workspace   = true
edge-domain-handler.workspace      = true
edge-domain-event.workspace        = true
edge-domain-pipeline.workspace     = true
edge-domain-projection.workspace   = true
edge-domain-saga.workspace         = true
edge-domain-registry.workspace     = true
edge-domain-lifecycle.workspace    = true
edge-domain-observer.workspace     = true
edge-domain-security.workspace     = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
