[package]
name                   = "edge-application"
version                = "0.10.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description = "edge — L2 Domain: umbrella crate; activate individual features (handler, event, command …) or `full` for all 14 port contracts"
keywords    = ["domain", "handler", "event-sourcing", "sea", "swe"]
categories  = ["development-tools"]

[package.metadata.arch]
application_type = "lib"
service_type     = "handler"

[lib]
path = "main/src/lib.rs"

[features]
default     = [
    "entity", "valueobject",
    "clock", "validator", "policy",
    "command", "query", "snapshot", "service",
    "repository", "handler", "event",
    "projection", "saga", "security",
]
entity      = ["dep:edge-application-entity"]
valueobject = ["dep:edge-application-valueobject"]
clock       = ["dep:edge-application-clock"]
validator   = ["dep:edge-application-validator"]
policy      = ["dep:edge-application-policy"]
command     = ["dep:edge-application-command"]
query       = ["dep:edge-application-query"]
snapshot    = ["dep:edge-application-snapshot"]
service     = ["dep:edge-application-service"]
repository  = ["dep:edge-application-repository"]
handler     = ["dep:edge-application-handler"]
event       = ["dep:edge-application-event"]
pipeline    = ["dep:edge-pipeline"]
projection  = ["dep:edge-application-projection", "event"]
saga        = ["dep:edge-application-saga",        "event", "command"]
security    = ["dep:edge-security-runtime", "dep:edge-security-authn", "dep:edge-security-authz"]
registry    = ["dep:edge-application-registry"]
lifecycle   = ["dep:edge-application-lifecycle"]
observer    = ["dep:edge-application-observer"]
full        = [
    "entity", "valueobject",
    "clock", "validator", "policy",
    "command", "query", "snapshot", "service",
    "repository", "handler", "event", "pipeline",
    "projection", "saga",
    "security",
    "registry", "lifecycle", "observer",
]

[dependencies]
thiserror     = "2"
async-trait   = "0.1"
parking_lot   = "0.12"
tracing       = { version = "0.1", default-features = false }

edge-application-entity      = { path = "../domain-entity", optional = true }
edge-application-valueobject = { path = "../domain-valueobject", optional = true }
edge-application-clock       = { path = "../domain-clock", optional = true }
edge-application-validator   = { path = "../domain-validator", optional = true }
edge-application-policy      = { path = "../domain-policy", optional = true }
edge-application-command     = { path = "../domain-command", optional = true }
edge-application-query       = { path = "../domain-query", optional = true }
edge-application-snapshot    = { path = "../domain-snapshot", optional = true }
edge-application-service     = { path = "../domain-service", optional = true }
edge-application-repository  = { path = "../domain-repository", optional = true }
edge-application-handler     = { path = "../domain-handler", optional = true }
edge-application-event       = { path = "../domain-event", optional = true }
edge-pipeline           = { git = "https://github.com/sweengineeringlabs/edge-pipeline.git", tag = "v0.2.0", optional = true }
edge-application-projection  = { path = "../domain-projection", optional = true }
edge-application-saga        = { path = "../domain-saga", optional = true }
edge-application-registry    = { path = "../domain-registry", optional = true }
edge-application-lifecycle   = { path = "../domain-lifecycle", optional = true }
edge-application-observer    = { path = "../domain-observer", optional = true }
edge-security-runtime   = { workspace = true, optional = true }
edge-security-authn     = { workspace = true, optional = true }
edge-security-authz     = { workspace = true, optional = true }

[dev-dependencies]
tokio       = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
futures     = "0.3"
edge-application-entity = { path = "../domain-entity" }
edge-application-valueobject.workspace  = true
edge-application-clock.workspace        = true
edge-application-validator.workspace    = true
edge-application-policy.workspace       = true
edge-application-command.workspace      = true
edge-application-query.workspace        = true
edge-application-snapshot.workspace     = true
edge-application-service.workspace      = true
edge-application-repository.workspace   = true
edge-application-handler.workspace      = true
edge-application-event.workspace        = true
edge-pipeline.workspace            = true
edge-application-projection.workspace   = true
edge-application-saga.workspace         = true
edge-application-registry.workspace     = true
edge-application-lifecycle.workspace    = true
edge-application-observer.workspace     = true
edge-security-runtime.workspace    = true
edge-security-authn.workspace      = true
edge-security-authz.workspace      = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
