[package]
name                   = "edge-application-observer"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description = "edge-domain — Observer port: trait contracts for request-scoped observability (tracing, logging, metrics)"
keywords    = ["domain", "observer", "tracing", "metrics", "sea"]
categories  = ["development-tools"]

[package.metadata.arch]
application_type = "lib"
service_type     = "observer"

[lib]
path = "main/src/lib.rs"

[dependencies]
serde.workspace = true

[dev-dependencies]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
