[package]
name                   = "edge-application-registry"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description = "edge-domain — Registry port contract: id-keyed resolution registry of shared entries (handler/service/task family)"
keywords    = ["domain", "registry", "sea", "swe"]
categories  = ["development-tools"]

[package.metadata.arch]
application_type = "lib"
service_type     = "registry"

[lib]
path = "main/src/lib.rs"

[dependencies]
serde.workspace     = true
thiserror.workspace = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
