[package]
name                   = "edge-application-validator"
version                = "0.1.0"
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description = "edge-domain — Validator port contract: structural field/configuration validation"
keywords    = ["domain", "validator", "validation", "sea", "swe"]
categories  = ["development-tools"]

[package.metadata.arch]
application_type = "lib"
service_type     = "validator"

[lib]
path = "main/src/lib.rs"

[dependencies]
serde.workspace     = true
thiserror.workspace = true

[dev-dependencies]
# no async needed for validator tests

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
